--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,8 @@
   height: 100%;
   left: 0; }
   .intro .logo {
+    text-align: center;
+    font-size: 12px;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -98,7 +100,8 @@
     left: 50%; }
     .step-gallery .article img {
       max-width: 90vw;
-      max-height: 90vh; }
+      max-height: 90vh;
+      cursor: pointer; }
     .step-gallery .article .shadow {
       width: 90%;
       margin: 10px auto 0 auto;
