--- a/sass/index.scss
+++ b/sass/index.scss
@@ -90,6 +90,8 @@ $ease: cubic-bezier(0.595, 0.000, 0.550, 1.540); /* custom */;
 	height:100%;
 	left:0;
 	.logo{
+		text-align: center;
+		font-size:12px;
 		position:absolute;
 		left:50%;
 		top:50%;
@@ -118,6 +120,7 @@ $ease: cubic-bezier(0.595, 0.000, 0.550, 1.540); /* custom */;
 		img{
 			max-width:90vw;
 			max-height:90vh;
+			cursor:pointer;
 		}
 
 		.shadow{
