--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,84 +1,148 @@
 $ease: cubic-bezier(0.595, 0.000, 0.550, 1.540); /* custom */;
 
 @keyframes moveLeft {
-    0%   {transform: translateX(100%);}
-    100% {transform: translateX(0%);}
+    0%   {
+    	transform: translateX(100%);
+    	-webkit-transform: translateX(100%);
+    	-ms-transform: translateX(100%);
+    }
+    100% {
+    	transform: translateX(0%);
+    	-webkit-transform: translateX(0%);
+    	-ms-transform: translateX(0%);
+    }
 }
 @keyframes moveLeft2 {
-    0%   {transform: translateX(100%);}
-    100% {transform: translateX(0%);}
+    0%   {
+    	transform: translateX(100%);
+    	-webkit-transform: translateX(100%);
+    	-ms-transform: translateX(100%);
+    }
+    100% {
+    	transform: translateX(0%);
+    	-webkit-transform: translateX(0%);
+    	-ms-transform: translateX(0%);
+    }
 }
 @keyframes moveRight {
-    0%   {transform: translateX(-100%);}
-    100% {transform: translateX(0%);}
+    0%   {
+    	transform: translateX(-100%);
+    	-webkit-transform: translateX(-100%);
+    	-ms-transform: translateX(-100%);
+    }
+    100% {
+    	transform: translateX(0%);
+    	-webkit-transform: translateX(0%);
+    	-ms-transform: translateX(0%);
+    }
 }
 
 
 @keyframes fadeOut {
 	0% {
 		transform:translateX(-50%) translateY(-50%) scale(1);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(1);
+		-ms-transform:translateX(-50%) translateY(-50%) scale(1);
 		opacity:1;
+		filter: blur(0);
 		-webkit-filter: blur(0);
+		-ms-filter: blur(0);
 	}
 	100% {
 		transform:translateX(-50%) translateY(-50%) scale(3);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(3);
+		-ms-transform:translateX(-50%) translateY(-50%) scale(3);
 		opacity:0;
+		filter: blur(5px);
 		-webkit-filter: blur(5px);
+		-ms-filter: blur(5px);
 	}
 }
 
 @keyframes fadeOut_r {
 	0% {
 		transform:translateX(-50%) translateY(-50%) scale(3);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(3);
+		-ms-transform:translateX(-50%) translateY(-50%) scale(3);
 		opacity:0;
+		filter: blur(5px);
 		-webkit-filter: blur(5px);
+		-ms-filter: blur(5px);
 	}
 	100% {
 		transform:translateX(-50%) translateY(-50%) scale(1);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(1);
+		-ms-transform:translateX(-50%) translateY(-50%) scale(1);
 		opacity:1;
+		filter: blur(0);
 		-webkit-filter: blur(0);
+		-ms-filter: blur(0);
 	}
 }
 
 @keyframes view{
 	0% {
 		transform:translateX(0%) translateY(-50%) scale(0.5);
+		-webkit-transform:translateX(0%) translateY(-50%) scale(0.5);
+		-ms-transform:translateX(0%) translateY(-50%) scale(0.5);
+		filter: blur(5px);
 		-webkit-filter: blur(5px);
+		-ms-filter: blur(5px);
 	}
 	100% {
 		transform:translateX(-50%) translateY(-50%) scale(1);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(1);
+		transform:translateX(-50%) translateY(-50%) scale(1);
+		filter: blur(0);
 		-webkit-filter: blur(0);
+		-ms-filter: blur(0);
 	}
 }
 
 @keyframes view_r{
 	0% {
 		transform:translateX(-50%) translateY(-50%) scale(1);
+		-webkit-transform:translateX(-50%) translateY(-50%) scale(1);
+		transform:translateX(-50%) translateY(-50%) scale(1);
+		filter: blur(0);
 		-webkit-filter: blur(0);
+		-ms-filter: blur(0);
 	}
 	100% {
 		transform:translateX(0%) translateY(-50%) scale(0.5);
+		-webkit-transform:translateX(0%) translateY(-50%) scale(0.5);
+		-ms-transform:translateX(0%) translateY(-50%) scale(0.5);
+		filter: blur(5px);
 		-webkit-filter: blur(5px);
+		-ms-filter: blur(5px);
 	}
 }
 
 @keyframes fadeIn {
 	0% {
 		transform:translateX(30%) translateY(-50%) scale(0.3);
+		-webkit-transform:translateX(30%) translateY(-50%) scale(0.3);
+		-ms-transform:translateX(30%) translateY(-50%) scale(0.3);
 		opacity:0;
 	}
 	100% {
 		transform:translateX(0%) translateY(-50%) scale(0.5);
+		-webkit-transform:translateX(0%) translateY(-50%) scale(0.5);
+		-ms-transform:translateX(0%) translateY(-50%) scale(0.5);
 		opacity:1;
 	}
 }
 @keyframes fadeIn_r {
 	0% {
 		transform:translateX(0%) translateY(-50%) scale(0.5);
+		-webkit-transform:translateX(0%) translateY(-50%) scale(0.5);
+		-ms-transform:translateX(0%) translateY(-50%) scale(0.5);
 		opacity:1;
 	}
 	100% {
 		transform:translateX(30%) translateY(-50%) scale(0.3);
+		-webkit-transform:translateX(30%) translateY(-50%) scale(0.3);
+		-ms-transform:translateX(30%) translateY(-50%) scale(0.3);
 		opacity:0;
 	}
 }
